@@ -320,3 +320,4 @@
  28-Aug-2021  V1.689 Extend failure reporting for MongoDb PdbxLoader()
  28-Aug-2021  V1.690 Further adjustments in reporting for MongoDb PdbxLoader()
  10-Sep-2021  V1.691 Update dependencies for rcsb.utils.dictionary and rcsb.utils.io
+ 23-Sep-2021  V1.692 Simplify updates to RepoHoldingsDataPrep() for the update collection
